Add Form (Insert Category

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -68,7 +68,7 @@
                    </a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="{{ path('new_category') }}">
+                   <a class="nav-link" href="{{ path('newCategory') }}">
                      <span data-feather="plus-circle"></span>
                      Nueva Categoria
                    </a>
