Style the forms

--- a/app/Resources/views/categories/new.html.twig
+++ b/app/Resources/views/categories/new.html.twig
@@ -1,6 +1,7 @@
 
 {# app/Resources/views/blog/index.html.twig #}
 {% extends 'base.html.twig' %}
+{% form_theme form 'form/appForm.html.twig' %}
 {% block title %}
 	Nueva Categoria
 {% endblock %}
