Add products to DB

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -44,13 +44,13 @@
                </h6>
                <ul class="nav flex-column">
                  <li class="nav-item">
-                   <a class="nav-link" href="{{ path('products') }}">
+                   <a class="nav-link" href="{{ path('product') }}">
                      <span data-feather="file-text"></span>
                      Lista 
                    </a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="{{ path('new_product') }}">
+                   <a class="nav-link" href="{{ path('newProduct') }}">
                      <span data-feather="plus-circle"></span>
                      Nuevo Producto
                    </a>
