--- a/app/Resources/views/products/list.html.twig
+++ b/app/Resources/views/products/list.html.twig
@@ -42,7 +42,7 @@
 	                  <td>{{ product.nameProduct }}</td>
 	                  <td>{{ product.descriptionProduct }}</td>
 	                  <td>{{ product.brand }}</td>
-	                  <td>{{ product.categoryId }}</td>
+	                  <td>{{ product.category }}</td>
 	                  <td>{{ product.price }}</td>
 	               </tr>
 				   {% endfor %}
