--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -7,7 +7,12 @@
 
 {# CONTENIDO #}
 {% block body %}
+	<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 my-5">
 
-    
+	    <div class="jumbotron">
+		  <h1 class="display-4">Aplicativo de Productos</h1>
+		  <p class="lead">Prueba para proceso de Selección - JUAN DAVID LEÓN</p>
+		</div>
 
+	</main>
 {% endblock %}
