First test, Modify Readme and organizes Enitties

--- a/app/Resources/views/categories/list.html.twig
+++ b/app/Resources/views/categories/list.html.twig
@@ -18,6 +18,9 @@
 			</div>
 		{% endif %}
 
+		<h6>Para activar o desactivar una categoria debe ingresar a editar 
+			<span class="text-info" data-feather="edit-2"></span> </h6>
+
         <div class="table-responsive">
          <table class="table table-striped table-sm">
             <thead>
